fix: spacing between basket and fooditem

--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
     display: none;
 }
 
-/* .scroll_none {
-    overflow-y: hidden;
-} */
-
 p {
     color: var(--color-font-dark);
     font-family: 'Palanquin';
@@ -171,6 +167,10 @@ ul {
     }
 
     .category_content_wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
         .food_item {
             background-color: var(--color-bg-accent);
             border-radius: 12px;
@@ -201,7 +201,7 @@ ul {
                 }
 
                 p:hover {
-                    overflow: auto;
+                    overflow: visible;
                 }
             }
 
@@ -233,10 +233,10 @@ ul {
 .basket_wrapper {
     position: fixed;
     width: 94%;
-    height: var(--height-basket-mobile);
+    right: 3%;
+    height: auto;
 
     .basket {
-        height: var(--height-basket-mobile);
         max-height: var(--height-basket-mobile);
         width: 100%;
         background-color: var(--color-bg-overlay);
@@ -417,6 +417,8 @@ ul {
         }
 
         .category_content_wrapper {
+            max-width: 90%;
+
             .food_item {
                 flex-direction: row;
                 justify-content: space-between;
@@ -430,8 +432,9 @@ ul {
                 .food_item_pricing {
                     flex-direction: column;
                     align-items: flex-end;
+
                     button {
-                        min-width: 115px;
+                        min-width: clamp(70px, calc((100svw - 850px) * 45 / 100 + 70px), 115px);
                     }
                 }
             }
